# tauri-plugin-fs-ios

./: Cargo.toml  README.md  build.rs  package.json
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: .gitignore  Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift  FSPlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: append_to_file.toml  createFile.toml  current_dir.toml  delete_dir.toml  list_dir.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
